# polymarket_bot

./: CMakeLists.txt  data_types.h  order_book_manager.cpp  order_book_manager.h  orderbook.h  polymarket_client.h  polymarket_fetcher.cpp
include/core/: http_client.hpp  orderbook.hpp  types.h  types.hpp
include/feed /: feed_client.h  poly_feed.hpp
python_scripts/: graphql_fields.py  graphql_schema.py  polymarket_websocket_checker.py
src/: main.cpp
src/feed/: binance_feed.cpp  poly_feed.cpp
